Fix footer links on mobile

--- a/style.css
+++ b/style.css
@@ -237,6 +237,11 @@ a {
   padding-bottom: .2rem;
 }
 
+#footer a {
+  margin-bottom: 1rem;
+  display: inline-block;
+}
+
 a:hover, a:hover{
   border-bottom: 1px #fff solid;
 }
